# vim: set noexpandtab:

2012-05-30 Matt
	* Moved directory to Institutes/UCIrvine/SUSYAnalysis
	* Added avgMu, cluster energy, and jet truth label to SusyNt
	* Meff function included in SusyDefs	
	
#------------------------------------------------------------------------------------
# Prior to the Merge 2012-05-30
#------------------------------------------------------------------------------------
	
2012-05-28 Serhan Mete <amete@cern.ch>
	* Root/Susy3LepCutflow.cxx/h: Switched off event details output
	* Root/SusyNtTools.cxx: Added RemoveSFOSPair to the baseline selection for 3 lepton

2012-05-25 Serhan Mete <amete@cern.ch>
	* Root/Susy3LepCutflow.cxx/h: Added handle to control output text file

2012-05-25 Matt
	* Changed jet cut: 20 GeV for 3Lep and 30 GeV for 2Lep
	
2012-05-23 Serhan Mete <amete@cern.ch>
	* Root/Susy3LepCutflow.cxx: Remove dependency on MultiLep

2012-05-23 Matt
	* Added top tagger to SusyNtTools.. Maybe could be in the 2 lep code..
	* Added SR2-5 to Susy2LepCutflow
	* Added All cuts relevant to SR2-5
	* Added m_anaType flag for NtTools to determine cuts
	
2012-05-22 Serhan Mete <amete@cern.ch>
	* data/muon_triggermaps_v2.0.root: Temporarily store muon trigger maps here.
	* Root/Susy3LepCutflow.cxx: Add new class template for 3 lepton cutflow generation.
	* SusyNtuple/Susy3LepCutflow.h: Add new class template for 3 lepton cutflow generation.
	* Root/TrilTrigLogic.cxx: Clone of Steve's TriggerLogic for 3 lepton trigger logic. 
	* SusyNtuple/TrilTrigLogic.h: Clone of Steve's TriggerLogic for 3 lepton trigger logic. 
	* Root/SusyDefs.cxx: Carry over getDataPeriod and getMcPeriod methods needed by the trigger logic. 
	* Root/SusyDefs.cxx: Fix Mt to match its decleration.
	* Root/SusyDefs.h: Carry over DataPeriod and McPeriod enums needed by the trigger logic. 

2012-05-19 Matt
	* Added phi to printout for e/m/jet
	* Removed SFOS cuts from leptons in order to compare with cutflow
	* Removed d0sig cut on electrons to match cutflow